--- a/react-app/src/index.css
+++ b/react-app/src/index.css
@@ -36,6 +36,84 @@ code {
   box-shadow: 0px 4px 10px 0px #00000040;
 }
 
+.box:focus {
+  box-shadow: 0px 4px 10px 0px #00000040;
+}
+
 .mt-16 {
   margin-top: 16px;
+}
+
+.form {
+  background: white;
+  display: flex;
+  flex-direction: column;
+  gap: 8px;
+  margin: 16px 0;
+  padding: 16px;
+}
+
+.form input {
+  padding: 8px 16px;
+  max-width: 300px;
+}
+
+.form button {
+  width: 200px;
+}
+
+.form label {
+  display: grid;
+  grid-template-columns: 150px 1fr;
+  align-items: center;
+}
+
+.dropdown-toggle {
+  width: 20px;
+  height: 20px;
+  cursor: pointer;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  border-radius: 50%;
+  padding: 4px;
+}
+
+.dropdown-toggle:hover {
+  background: rgb(182, 182, 182);
+}
+
+.dropdown-options {
+  position: absolute;
+  box-shadow: 0px 4px 10px 0px #00000040;
+  top: 48px;
+  right: 16px;
+  z-index: 100;
+  background: white;
+  padding: 16px;
+  display: flex;
+  flex-direction: column;
+}
+
+.relative {
+  position: relative;
+}
+
+.modal {
+  height: 100vh;
+  width: 100vw;
+  position: fixed;
+  top: 0;
+  left: 0;
+  display: flex;
+  align-items: center;
+  background: rgba(56, 56, 56, 0.5);
+  justify-content: center;
+  z-index: 200;
+}
+
+.modal-content {
+  width: 500px;
+  height: 300px;
+  background: white;
 }
