--- a/react-app/src/components/Cities/Cities.module.css
+++ b/react-app/src/components/Cities/Cities.module.css
@@ -11,3 +11,10 @@
   justify-content: space-between;
   padding: 16px;
 }
+
+.deleteModalControls {
+  display: flex;
+  gap: 16px;
+  margin-top: 16px;
+  justify-content: center;
+}
