--- a/react-app/src/components/common/ErrorAlert/ErrorAlert.module.css
+++ b/react-app/src/components/common/ErrorAlert/ErrorAlert.module.css
@@ -7,7 +7,6 @@
   background: #e04040;
   color: white;
   border: 1px solid #881d1d;
-  padding: 16px;
   border-radius: 16px;
   animation: pulse 2s infinite;
 }
@@ -24,4 +23,27 @@
   100% {
     transform: translate(-50%, 50%) scale(0.95);
   }
+}
+
+.content {
+  position: relative;
+  padding: 16px;
+}
+
+.close {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  border-radius: 16px;
+  position: absolute;
+  top: 8px;
+  right: 8px;
+  cursor: pointer;
+  width: 24px;
+  height: 24px;
+}
+
+.close:hover {
+  background: #fdfdfd;
+  color: #e04040;
 }
