--- a/react-app/src/components/Faculties/Faculties.module.css
+++ b/react-app/src/components/Faculties/Faculties.module.css
@@ -1,13 +1,20 @@
-.facultiesList {
+.itemsList {
   display: flex;
   flex-wrap: wrap;
   gap: 16px;
 }
 
-.facultiesListItem {
+.listItem {
   display: flex;
   width: 370px;
   align-items: center;
   justify-content: space-between;
   padding: 16px;
+}
+
+.deleteModalControls {
+  display: flex;
+  gap: 16px;
+  margin-top: 16px;
+  justify-content: center;
 }
